    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/??  richardjgowers, IAlibay, tylerjereddy, xiki-tempula, lilyminium,
          zemanj

  * 1.1.0

Fixes
  * Removes use of absolute paths in setup.py to avoid Windows installation
    failures (Issue #3129)
  * Adds test for crashes caused by small box NSGrid searches (Issue #2670)
  * Replaces decreated NumPy type aliases and fixes NEP 34 explicit ragged
    array warnings (PR #3139, backports PRs #2845 and #2834)
  * Fixed several issues with NSGrid and triclinic boxes not finding some pairs.
    (Issues #2229 #2345 #2919, PR #2937).

Changes
  * Maximum pinned versions in setup.py removed for python 3.6+ (PR #3139)

Deprecations
  * Deprecated current Group.bonds, angles, dihedrals, impropers
    behavior where it returns connections to atoms outside the group
    by default (Issue #1264, #2821, PR #3159)
  * ParmEdConverter no longer accepts Timestep objects at all
    (Issue #3031, PR #3172)
  * NCDFWriter `scale_factor` writing will change in version 2.0 to
    better match AMBER outputs (Issue #2327)
  * Deprecated using the last letter of the segid as the
    chainID when writing PDB files (Issue #3144)
  * Deprecated tempfactors and bfactors being separate
    TopologyAttrs, with a warning (PR #3161)
  * hbonds.WaterBridgeAnalysis will be removed in 2.0.0 and
    replaced with hydrogenbonds.WaterBridgeAnalysis (#3111)
  * TPRParser indexing resids from 0 by default is deprecated.
    From 2.0 TPRParser will index resids from 1 by default.
  

Enhancements
  * Added `get_connections` method to get bonds, angles, dihedrals, etc.
    with or without atoms outside the group (Issues #1264, #2821, PR #3160)
  * Added `tpr_resid_from_one` keyword to select whether TPRParser